# cookiecutter-mlpoc

./: Dockerfile  README.md  cookiecutter.json  pyproject.toml
notebooks/: demo-colab-streamlit.ipynb
{{ cookiecutter.project_slug }}/: .env.example  Dockerfile  Dockerfile.tpu  LICENSE  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_slug }}/.github/workflows/: test.yml
{{ cookiecutter.project_slug }}/notebooks/: demo_colab.ipynb  demo_colab_streamlit.ipynb
