[tool.poetry]
name = "hoge"
version = "0.1.0"
description = ""
authors = ["Tomoaki Nakamura <tyo_yo@icloud.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
streamlit = "^0.72.0"
smart_open = {extras = ["all"], version = "^4.0.1"}
directory_tree = "^0.0.2"
dask = {extras = ["complete"], version = "^2020.12.0"}
flatten-dict = "^0.3.0"
chardiff_html = "^0.1.1"
allennlp = "^1.3.0"
allennlp-models = "^1.3.0"
sudachipy = "^0.4.9"
sudachidict_core = "^20200722"
comet_ml = "^3.2.9"
python-Levenshtein = "^0.12.0"
mecab-python3 = "^1.0.3"
unidic-lite = "^1.0.7"
strsimpy = "^0.2.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"
pytest-profiling = "^1.7.0"
pytest = "^6.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"
tensorboard = "^2.4.1"
isort = {extras = ["toml"], version = "^5.7.0"}

[tool.pytest.ini_options]
python_paths = "./"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
