[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} {{ cookiecutter.email }}"]

[tool.poetry.dependencies]
python = "^3.6"
streamlit = "^0.72.0"
smart_open = {extras = ["all"], version = "^4.0.1"}
comet_ml = "^3.2.9"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"
pytest-profiling = "^1.7.0"

[tool.pytest.ini_options]
python_paths = "./"

[tool.isort]
known_first_party = "{{ cookiecutter.project_slug }}"
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
